[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "braillebasejapanese"
version = "0.0.4"
description = "A complete and extensible Unicode Braille processing library. Japanese language version"
authors = [
    { name = "Nagao Yuji" }
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.6"

dependencies = [
    "braillebase>=0.0.10"
]

keywords = ["braille", "unicode", "accessibility", "API", "binary", "blind", "education"]

[project.urls]
Homepage = "https://github.com/DukaCrazy/braillebasejapanese"
Documentation = "https://github.com/DukaCrazy/braillebasejapanese"
Source = "https://github.com/DukaCrazy/braillebasejapanese"
